# otoreis_lite

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/core/: db.py
app/examples/: sample_tasks.json
app/mcp/: routes.py
app/models/: schemas.py
app/services/: executor.py  orchestrator.py  planner.py  policy.py  settings_manager.py  state_manager.py
app/static/: dashboard.css  dashboard.js
app/templates/: dashboard.html
app/tools/: browser_tool.py  filesystem_tool.py
scripts/: run_sample_task.sh
