[project]
name = "otoreis-lite"
version = "0.1.0"
description = "MVP autonomous browser/file agent with MCP integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "jinja2>=3.1.4",
  "playwright>=1.55.0",
  "httpx>=0.27.0"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.8"
]
